# holdem-poker

./: README.md
client/: app.py  client.py  listener.py  traffic.py  widgets.py
core/: 1.asta  README.md
core/PokerCore.package/BetState.class/: properties.json
core/PokerCore.package/Deck.class/: properties.json
core/PokerCore.package/HttpSender.class/: properties.json
core/PokerCore.package/PCore.class/: properties.json
core/PokerCore.package/PokerKernel.class/: properties.json
core/PokerCore.package/PokerUser.class/: properties.json
core/PokerCore.package/PreFlopState.class/: properties.json
core/PokerCore.package/WaitState.class/: properties.json
core/PokerCore.package/monticello.meta/: categories.st  package
determiner/: README.md  determiner.cabal
determiner/PokerDeterminer.package/PokerHand.class/: properties.json
determiner/PokerDeterminer.package/PokerHand.class/instance/: ^more.st  asPokerHand.st  initialize.st  value.st
determiner/PokerDeterminer.package/monticello.meta/: categories.st  package
determiner/repository/PokerDeterminer.package/Determiner.class/: properties.json
determiner/repository/PokerDeterminer.package/Determiner.class/instance/: server.st
determiner/repository/PokerDeterminer.package/PokerHand.class/instance/: ^equals.st  asDictionary.st  cards.st  type.st
determiner/repository/PokerDeterminer.package/Sender.class/: properties.json
determiner/repository/PokerDeterminer.package/Sender.class/instance/: sendRequest..st
determiner/src/: Main.hs
evaluator/: README.md  project.clj
(+39 files in other folders)
