name:                determiner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rest#readme
license:             BSD3
license-file:        LICENSE
author:              Miodrag Vilotijevic
maintainer:          example@example.com
copyright:           2017 Miodrag Vilotijevic
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable determiner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       scotty,
                       aeson,
                       transformers,
                       http-client,
                       http-conduit,
                       text
